--- a/public/html/resume1.html
+++ b/public/html/resume1.html
@@ -68,7 +68,7 @@
     </div>
   </nav>
 
-  <section id="home" class="flex flex-col justify-center">
+  <section id="home" class="flex flex-col justify-center md:mb-8">
     <div id="layout" class="stars -z-10"></div>
     <div class="container flex flex-col items-center justify-center" data-aos="flip-left" data-aos-delay="200">
       <h1 class="text-6xl font-bold text-sky-700">Resume 1</h1>
@@ -96,7 +96,7 @@
   </section>
 
   <main id="main">
-    <section id="about" class="mt-4 xl:pt-24 lg:mb-12">
+    <section id="about" class="mt-4 xl:pt-24 md:mt-40 md:pt-40 lg:mb-12">
       <div class="container" data-aos="fade-up">
         <div>
           <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
