--- a/public/html/backgroound.html
+++ b/public/html/backgroound.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="../img/favicon.png" rel="icon" />
+  <link href="../img/apple-touch-icon.png" rel="apple-touch-icon" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
   <title>Background</title>
 </head>
