--- a/public/html/resume2.html
+++ b/public/html/resume2.html
@@ -97,7 +97,7 @@
     </section>
 
     <main id="main">
-        <section id="about" class="mt-4 xl:pt-24 lg:mb-12">
+        <section id="about" class="mt-4 xl:pt-24 lg:mb-12 md:mt-40 md:pt-40">
             <div class="container" data-aos="fade-up">
                 <div>
                     <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-pink-400">
